# mcp-compose

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: morning.toml
src/mcp_compose/: __init__.py  cli.py  config.py  engine.py  mcp_server.py  models.py  studio.py  templates.py
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_executor.py  test_mcp.py  test_models.py  test_templates.py
